# rstorch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: linting.yml  tests.yml
src/: iterator.rs  lib.rs  main.rs  model.rs  utils.rs
src/data/: chain.rs  data_loader.rs  mod.rs  sampler.rs  subset.rs  transform.rs
src/data/dataset/: basic.rs  chain.rs  mod.rs  shuffler.rs  subset.rs  transform.rs
src/data/dataset/hub/: mnist.rs  mod.rs
src/loss/: cross_entropy.rs  mod.rs
src/module/: iterator.rs  linear.rs  mod.rs  safe_module.rs  sequential.rs
src/module/activation/: identity.rs  mod.rs  relu.rs  softmax.rs
src/module/init/: he.rs  mod.rs  sigma.rs  xavier.rs
src/optim/: mod.rs  sgd.rs
tests/: test.rs
