[package]
name = "rstorch"
version = "0.1.0"
authors = ["Ferran Sanchez Llado"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ferranSanchezLlado/rstorch.git"
homepage = "https://github.com/ferranSanchezLlado/rstorch.git"
documentation = "https://docs.rs/rstorch"
description = "Implementation from scratch of a neural network framework in Rust inspired by PyTorch"
keywords = ["neural-network", "machine-learning", "deep-learning", "pytorch", "rust"]
categories = ["science", "mathematics", "algorithms"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
