[package]
name = "rstorch"
version = "0.1.0"
authors = ["Ferran Sanchez Llado"]
license = "MIT or Apache-2.0"
readme = "README.md"
repository = "https://github.com/ferranSanchezLlado/rstorch.git"
homepage = "https://github.com/ferranSanchezLlado/rstorch.git"
documentation = "https://docs.rs/rstorch"
description = "Implementation from scratch of a neural network framework in Rust inspired by PyTorch"
keywords = ["neural-network", "machine-learning", "deep-learning", "pytorch", "rust"]
categories = ["science", "mathematics", "algorithms"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["blocking"], optional = true }
flate2 = { version = "1.0.26", optional = true }

[dev-dependencies]
fs_extra = "1.3.0"

[features]
default = []
dataset_hub = ["dep:reqwest", "dep:flate2"]
full = ["dataset_hub"]

